Batch updates / diffgraphs for odb (#224)
* This adds an overflowdb implementation of DiffGraphs, all collected in BatchedUpdate.
* In order to support this, there is now an odb concept of `NewNode`.
* The public direct graph modification functions all get `@deprecated`. Removal will only happen once we have the flat memory layout. The diffgraph application uses package-private direct mutation API.
* This change is mildly breaking -- it is definitely not binary compatible, and it requires some source-code changes when defining nodes.